[package]
name = "fdk"
version = "0.1.2"
authors = ["Johan Planchon <dev@planchon.xyz>"]
description = "Experimental Function Development Kit for the Fn Project serverless platform"
edition = "2018"
repository = "https://github.com/joxcat/fdk-rust"
keywords = ["Fn", "serverless", "FaaS"]
categories = ["web-programming", "development-tools"]
license = "MIT"

[dependencies]
actix-web = { version = "^3.3", features = ["compress"], default-features = false }
slog = "^2.7"
thiserror = "^1.0"
